// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button :props :block 1`] = `
<button
  class="t-button t-size-m t-button--variant-base t-button--theme-primary t-size-full-width"
  type="button"
>
  <span
    class="t-button__text"
  >
    
    text
    
  </span>
</button>
`;

exports[`Button :props :content 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      bar
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      bar
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      bar
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      bar
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      bar
      
    </span>
  </button>
</div>
`;

exports[`Button :props :disabled 1`] = `
<button
  class="t-button t-size-m t-button--variant-base t-button--theme-primary t-is-disabled"
  disabled=""
  type="button"
>
  <span
    class="t-button__text"
  >
    
    text
    
  </span>
</button>
`;

exports[`Button :props :icon function 1`] = `
<button
  class="t-button t-size-m t-button--variant-base t-button--theme-primary t-button--icon-only"
  type="button"
>
  
  <i>
    custom icon
  </i>
  
  
</button>
`;

exports[`Button :props :loading 1`] = `
<button
  class="t-button t-size-m t-button--variant-base t-button--theme-primary t-is-disabled t-is-loading"
  type="button"
>
  
  <div
    class="t-loading t-size-m t-loading-mask t-loading-lock t-loading--inherit-color v-transfer-dom"
  >
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      size="medium"
      version="1.1"
      viewBox="0 0 14 14"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="1"
        y="1"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
    <!---->
  </div>
  <span
    class="t-button__text"
  >
    
    text
    
  </span>
  
</button>
`;

exports[`Button :props :shape 1`] = `
<button
  class="t-button t-size-m t-button--variant-base t-button--theme-primary t-button--shape-round"
  type="button"
>
  <span
    class="t-button__text"
  >
    
    text
    
  </span>
</button>
`;

exports[`Button :props :size 1`] = `
<button
  class="t-button t-size-l t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    
    text
    
  </span>
</button>
`;

exports[`Button :props :variant 1`] = `
<button
  class="t-button t-size-m t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    
    text
    
  </span>
</button>
`;

exports[`Button <slot> <icon> 1`] = `
<button
  class="t-button t-size-m t-button--variant-base t-button--theme-primary t-button--icon-only"
  type="button"
>
  
  
  <div />
  
  
  
</button>
`;
